--- a/package.json
+++ b/package.json
@@ -2,5 +2,12 @@
   "name": "typescript-learning",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "nodemon index.js",
+    "ts": "tsc -w index.ts"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  }
 }
